; ModuleID = '/home/carl/AnghaBench/git/extr_bisect.c_bisect_common.c'
source_filename = "/home/carl/AnghaBench/git/extr_bisect.c_bisect_common.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rev_info = type { i64 }

@.str = private unnamed_addr constant [27 x i8] c"revision walk setup failed\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rev_info*)* @bisect_common to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bisect_common(%struct.rev_info* %0) #0 {
  %2 = alloca %struct.rev_info*, align 8
  store %struct.rev_info* %0, %struct.rev_info** %2, align 8
  %3 = load %struct.rev_info*, %struct.rev_info** %2, align 8
  %4 = call i64 @prepare_revision_walk(%struct.rev_info* %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = call i32 @die(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0))
  br label %8

8:                                                ; preds = %6, %1
  %9 = load %struct.rev_info*, %struct.rev_info** %2, align 8
  %10 = getelementptr inbounds %struct.rev_info, %struct.rev_info* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %8
  %14 = load %struct.rev_info*, %struct.rev_info** %2, align 8
  %15 = call i32 @mark_edges_uninteresting(%struct.rev_info* %14, i32* null, i32 0)
  br label %16

16:                                               ; preds = %13, %8
  ret void
}

declare dso_local i64 @prepare_revision_walk(%struct.rev_info*) #1

declare dso_local i32 @die(i8*) #1

declare dso_local i32 @mark_edges_uninteresting(%struct.rev_info*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
